[gd_scene load_steps=7 format=2]

[ext_resource path="res://SDKTest.gd" type="Script" id=1]
[ext_resource path="res://CrazyGamesLogo.png" type="Texture" id=2]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.552941, 0.372549, 1, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.552941, 0.372549, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0, 0, 0, 0.282353 )
shadow_size = 5

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.317647, 0.117647, 0.823529, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.317647, 0.117647, 0.823529, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0, 0, 0, 0.282353 )
shadow_size = 5

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.443137, 0.215686, 1, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.443137, 0.215686, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0, 0, 0, 0.282353 )
shadow_size = 5

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.407843, 0.258824, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 1
border_width_bottom = 1

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.698039, 0.619608, 1, 1 )

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 487, 95 )
scale = Vector2( 0.199167, 0.199167 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 406.0
margin_top = 165.0
margin_right = 572.0
margin_bottom = 179.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CrazySDK Godot Template"

[node name="Panel" type="Panel" parent="."]
margin_left = 470.0
margin_top = 408.0
margin_right = 822.0
margin_bottom = 536.0

[node name="DebugLabel" type="RichTextLabel" parent="Panel"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 10.0
margin_right = -8.0
margin_bottom = -8.0
text = "### Debug Logs ###"
scroll_following = true
deselect_on_focus_loss_enabled = false

[node name="MidgameAdButton" type="Button" parent="."]
margin_left = 64.0
margin_top = 216.0
margin_right = 246.0
margin_bottom = 256.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
text = "Show midgame ad"

[node name="RewardedAdButton" type="Button" parent="."]
margin_left = 64.0
margin_top = 280.0
margin_right = 246.0
margin_bottom = 320.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
text = "Show rewarded ad"

[node name="HappytimeButton" type="Button" parent="."]
margin_left = 470.0
margin_top = 344.0
margin_right = 652.0
margin_bottom = 384.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
text = "Trigger Happytime"

[node name="BannerButton" type="Button" parent="."]
margin_left = 64.0
margin_top = 344.0
margin_right = 246.0
margin_bottom = 384.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
text = "Show Banner"

[node name="BannerSizesLabel" type="Label" parent="."]
margin_left = 264.0
margin_top = 344.0
margin_right = 350.0
margin_bottom = 358.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Banner Sizes:"

[node name="BannerSizes" type="ItemList" parent="."]
margin_left = 264.0
margin_top = 360.0
margin_right = 391.0
margin_bottom = 456.0

[node name="ClearBannerButton" type="Button" parent="."]
margin_left = 64.0
margin_top = 408.0
margin_right = 246.0
margin_bottom = 448.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
text = "Clear Banners"

[node name="AdblockDetectionButton" type="Button" parent="."]
margin_left = 64.0
margin_top = 472.0
margin_right = 246.0
margin_bottom = 512.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
text = "Detect adblocker"

[node name="LoadingButton" type="Button" parent="."]
unique_name_in_owner = true
margin_left = 470.0
margin_top = 216.0
margin_right = 652.0
margin_bottom = 256.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
text = "Start loading"

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = 678.0
margin_top = 224.0
margin_right = 806.0
margin_bottom = 248.0
custom_styles/fg = SubResource( 1 )

[node name="GameplayButton" type="Button" parent="."]
unique_name_in_owner = true
margin_left = 470.0
margin_top = 280.0
margin_right = 652.0
margin_bottom = 320.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
toggle_mode = true
text = "Start Gameplay"

[connection signal="pressed" from="MidgameAdButton" to="." method="_on_MidgameAdButton_pressed"]
[connection signal="pressed" from="RewardedAdButton" to="." method="_on_RewardedAdButton_pressed"]
[connection signal="pressed" from="HappytimeButton" to="." method="_on_HappytimeButton_pressed"]
[connection signal="pressed" from="BannerButton" to="." method="_on_BannerButton_pressed"]
[connection signal="item_selected" from="BannerSizes" to="." method="_on_BannerSizes_item_selected"]
[connection signal="pressed" from="ClearBannerButton" to="." method="_on_ClearBannerButton_pressed"]
[connection signal="pressed" from="AdblockDetectionButton" to="." method="adblockDetection"]
[connection signal="pressed" from="LoadingButton" to="." method="_on_LoadingButton_pressed"]
[connection signal="toggled" from="GameplayButton" to="." method="_on_GameplayButton_toggled"]
